--- a/css/variables.css
+++ b/css/variables.css
@@ -86,5 +86,5 @@
   --z-menu-overlay: 90;
   --z-menu: 95;
   --z-modal: 200;
-  --z-ripple: 0;
+  --z-ripple: 3;
 }
